force-app/main/default/objects/User_Session__c/User_Session__c.object-meta.xml
<CustomObject>
    <description>Created the object to store the User session Id token. It is required for the logout functionality. the id_token_hint parameter is a id token.</description>
    <label>User Session</label>
    <nameField>
        <label>User Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>