force-app/main/default/objects/User_Session__c/fields/Id_Token__c.field-meta.xml
<CustomField>
    <fullName>Id_Token__c</fullName>
    <label>Id Token</label>
    <length>2046</length>
    <type>LongTextArea</type>
</CustomField>