force-app/main/default/objects/User_Session__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>